--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+*, body, html {
+  cursor: none !important;
+}
 
 .alltop{
     z-index: 99999 !important;
